fix font size label + center wrapping

--- a/ob-kb-percent/public/ob-kb-percent.css
+++ b/ob-kb-percent/public/ob-kb-percent.css
@@ -11,6 +11,7 @@
 	display: flex;
 	text-align: center;
 	align-items: center;
+	align-content: center;
 }
 
 .percentview_ratio {
